--- a/github/workflows/run-bot.yml
+++ b/github/workflows/run-bot.yml
@@ -1,5 +1,3 @@
-name: Notify Buy
-
 on:
   schedule:
     - cron: '*/5 * * * *'
@@ -25,4 +23,4 @@ jobs:
           TOKEN: ${{ secrets.TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           WALLET_ADDRESS: ${{ secrets.WALLET_ADDRESS }}
-        run: python main.py
+        run: python main.pyp
